# Agentic-AI-Project-using-CrewAI-and-Gemini

./: README.md
ai_developement/: README.md  pyproject.toml  report.md
ai_developement/src/ai_developement/: crew.py  main.py
