[project]
name = "ai_developement"
version = "0.1.0"
description = "ai-developement using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]==1.12.2",
    "google-generativeai>=0.8.6",
    "langchain-google-genai>=4.2.1",
]

[project.scripts]
ai_developement = "ai_developement.main:run"
run_crew = "ai_developement.main:run"
train = "ai_developement.main:train"
replay = "ai_developement.main:replay"
test = "ai_developement.main:test"
run_with_trigger = "ai_developement.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
